SERVER-67284 Allow $fill 'partitionByFields' to partition by a dotted path